force-app/main/default/objects/Review__c/fields/Candidate_Position__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Position__c</fullName>
    <formula>Job_Application__r.Candidate__r.First_Name__c &amp; &quot; &quot; &amp; Job_Application__r.Candidate__r.Name &amp; &quot;, &quot; &amp;  Job_Application__r.Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate &amp; Position</label>
    <type>Text</type>
</CustomField>