force-app/main/default/objects/Review__c/fields/Date_of_review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_review__c</fullName>
    <label>Date of review</label>
    <type>Date</type>
</CustomField>