force-app/main/default/objects/Review__c/fields/Feedback_comment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_comment__c</fullName>
    <inlineHelpText>Write your impression after this part of the interview if it needs.</inlineHelpText>
    <label>Feedback comment</label>
    <type>TextArea</type>
</CustomField>