force-app/main/default/objects/Review__c/fields/Interview_type__c.field-meta.xml
<CustomField>
    <fullName>Interview_type__c</fullName>
    <inlineHelpText>Choose the type of interview</inlineHelpText>
    <label>Interview type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consideration of CV</fullName>
            </value>
            <value>
                <fullName>Practice test</fullName>
            </value>
            <value>
                <fullName>Talkinkg</fullName>
            </value>
            <value>
                <fullName>Technical interview</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>