force-app/main/default/objects/Review__c/validationRules/Date_of_interview.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_interview</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_review__c - TODAY() &lt; 0 &amp;&amp; ISNULL(CreatedDate)</errorConditionFormula>
    <errorDisplayField>Date_of_review__c</errorDisplayField>
    <errorMessage>Date of the interview cannot be before today.</errorMessage>
</ValidationRule>