force-app/main/default/objects/Review__c/validationRules/Rating_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_rule</fullName>
    <active>false</active>
    <errorConditionFormula>OR (
Rating__c &lt; 1,
Rating__c &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be from 1 till 10.</errorMessage>
</ValidationRule>