force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Position__c</columns>
    <columns>Interview_type__c</columns>
    <columns>Job_Application__c</columns>
    <columns>Rating__c</columns>
    <columns>Date_of_review__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>